--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
         <input type="search" name="search-bar" id="search-bar" />
         <button class="notifications">🔔</button>
         <img src="" alt="user avatar" class="avatar" />
-        <p class="user-name alternate">graycrovv</p>
+        <p class="user-name alternate">graycorvid</p>
       </div>
-      <div class="welcome"><p class="user-name">graycrovv</p></div>
+      <div class="welcome"><p class="user-name">graycorvid</p></div>
       <div class="functionalities">
         <button>New</button><button>Upload</button><button>Share</button>
       </div>
