Continue working on aside and main.

--- a/src/index.html
+++ b/src/index.html
@@ -37,63 +37,109 @@
         </div>
         <div class="welcome">
           <p class="hi-there">Hi there,</p>
-          <p class="user-name-big">graycorvid</p>
+          <p class="user-name-big">Gray Corvid (@graycorvid)</p>
         </div>
-        <div class="functionalities">
+        <div class="buttons">
           <button>New</button><button>Upload</button><button>Share</button>
         </div>
       </div>
     </header>
     <aside>
       <nav>
-        <h1>Dashboard</h1>
+        <h1><i class="fa-solid fa-crow"></i>Dashboard</h1>
         <div class="menu">
           <ul>
+            <i class="fa-solid fa-house"></i>
             Home
           </ul>
           <ul>
+            <i class="fa-regular fa-address-card"></i>
             Profile
           </ul>
           <ul>
+            <i class="fa-solid fa-message"></i>
             Messages
           </ul>
           <ul>
+            <i class="fa-solid fa-clock"></i>
             History
           </ul>
           <ul>
+            <i class="fa-solid fa-note-sticky"></i>
             Tasks
           </ul>
           <ul>
+            <i class="fa-solid fa-users"></i>
             Communities
           </ul>
         </div>
         <div class="controls">
           <ul>
+            <i class="fa-solid fa-gear"></i>
             Settings
           </ul>
           <ul>
+            <i class="fa-solid fa-circle-question"></i>
             Support
           </ul>
           <ul>
+            <i class="fa-solid fa-shield-halved"></i>
             Privacy
           </ul>
         </div>
       </nav>
     </aside>
     <main>
-      <div class="content">
-        <div class="projects">
-          <h2>Projects</h2>
-          <div class="project1"></div>
-          <div class="project2"></div>
-          <div class="project3"></div>
-          <div class="project4"></div>
-          <div class="project5"></div>
-          <div class="project6"></div>
+      <div class="projects">
+        <h2>Projects</h2>
+        <div class="project1">
+          <h3>Project One</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
+            velit rerum neque, fuga aliquam eveniet est corrupti facere
+            exercitationem quisquam totam omnis error qui deleniti quam. Ea
+            natus est error?
+          </p>
         </div>
-        <div class="announcements"><h2>Announcements</h2></div>
-        <div class="trending"><h2>Trending</h2></div>
+        <div class="project2">
+          <h3>Project Two</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
+            quis possimus quae praesentium veniam.
+          </p>
+        </div>
+        <div class="project3">
+          <h3>Project Three</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="project4">
+          <h3>Project Four</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Voluptatibus deleniti consequatur quam ad doloribus eveniet maiores
+            voluptates laborum repellendus, reprehenderit amet, error dolore
+            nesciunt nihil at dolorum totam corporis eligendi?
+          </p>
+        </div>
+        <div class="project5">
+          <h3>Project Five</h3>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque
+            voluptatem dolorum nulla vero quisquam veritatis illum enim qui.
+          </p>
+        </div>
+        <div class="project6">
+          <h3>Project Six</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos culpa
+            dicta veritatis aliquid odit! Ab aliquam maiores soluta autem
+            magnam, a recusandae dolorum nobis voluptates distinctio! Saepe odit
+            veniam laudantium.
+          </p>
+        </div>
       </div>
+      <div class="announcements"><h2>Announcements</h2></div>
+      <div class="trending"><h2>Trending</h2></div>
     </main>
   </body>
 </html>
