Style main section

--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
     <main>
       <div class="projects">
         <h2>Projects</h2>
-        <div class="project1">
+        <div class="project">
           <h3>Project One</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
@@ -100,41 +100,64 @@
             exercitationem quisquam totam omnis error qui deleniti quam. Ea
             natus est error?
           </p>
+          <p class="icons">
+            <i class="fa-regular fa-star"></i><i class="fa-regular fa-eye"></i
+            ><i class="fa-solid fa-share-nodes"></i>
+          </p>
         </div>
-        <div class="project2">
+        <div class="project">
           <h3>Project Two</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
             quis possimus quae praesentium veniam.
           </p>
+          <p class="icons">
+            <i class="fa-regular fa-star"></i><i class="fa-regular fa-eye"></i
+            ><i class="fa-solid fa-share-nodes"></i>
+          </p>
         </div>
-        <div class="project3">
+        <div class="project">
           <h3>Project Three</h3>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <p class="icons">
+            <i class="fa-regular fa-star"></i><i class="fa-regular fa-eye"></i
+            ><i class="fa-solid fa-share-nodes"></i>
+          </p>
         </div>
-        <div class="project4">
+        <div class="project">
           <h3>Project Four</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
             Voluptatibus deleniti consequatur quam ad doloribus eveniet maiores
             voluptates laborum repellendus, reprehenderit amet, error dolore
             nesciunt nihil at dolorum totam corporis eligendi?
           </p>
+          <p class="icons">
+            <i class="fa-regular fa-star"></i><i class="fa-regular fa-eye"></i
+            ><i class="fa-solid fa-share-nodes"></i>
+          </p>
         </div>
-        <div class="project5">
+        <div class="project">
           <h3>Project Five</h3>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque
             voluptatem dolorum nulla vero quisquam veritatis illum enim qui.
           </p>
+          <p class="icons">
+            <i class="fa-regular fa-star"></i><i class="fa-regular fa-eye"></i
+            ><i class="fa-solid fa-share-nodes"></i>
+          </p>
         </div>
-        <div class="project6">
+        <div class="project">
           <h3>Project Six</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos culpa
             dicta veritatis aliquid odit! Ab aliquam maiores soluta autem
             magnam, a recusandae dolorum nobis voluptates distinctio! Saepe odit
             veniam laudantium.
+          </p>
+          <p class="icons">
+            <i class="fa-regular fa-star"></i><i class="fa-regular fa-eye"></i
+            ><i class="fa-solid fa-share-nodes"></i>
           </p>
         </div>
       </div>
