Style"Announcements" and "Trending" sections

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
         <div class="user-section">
           <i class="fa-regular fa-bell"></i>
           <div class="image">
-            <img src="./img/crow.png" alt="user avatar" class="avatar" />
+            <img src="./img/crow.png" alt="user avatar crow" class="avatar" />
           </div>
 
           <p class="user-name alternate">Gray Corvid</p>
@@ -33,7 +33,7 @@
       </div>
       <div class="header-bottom">
         <div class="image-big">
-          <img src="./img/crow.png" alt="user avatar" class="avatar-big" />
+          <img src="./img/crow.png" alt="user avatar crow" class="avatar-big" />
         </div>
         <div class="welcome">
           <p class="hi-there">Hi there,</p>
@@ -97,8 +97,7 @@
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
             velit rerum neque, fuga aliquam eveniet est corrupti facere
-            exercitationem quisquam totam omnis error qui deleniti quam. Ea
-            natus est error?
+            exercitationem.
           </p>
           <p class="icons">
             <i class="fa-regular fa-star"></i><i class="fa-regular fa-eye"></i
@@ -152,8 +151,7 @@
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos culpa
             dicta veritatis aliquid odit! Ab aliquam maiores soluta autem
-            magnam, a recusandae dolorum nobis voluptates distinctio! Saepe odit
-            veniam laudantium.
+            magnam, a recusandae dolorum nobis voluptates distinctio!
           </p>
           <p class="icons">
             <i class="fa-regular fa-star"></i><i class="fa-regular fa-eye"></i
@@ -161,8 +159,61 @@
           </p>
         </div>
       </div>
-      <div class="announcements"><h2>Announcements</h2></div>
-      <div class="trending"><h2>Trending</h2></div>
+      <div class="announcements">
+        <h2>Announcements</h2>
+        <div class="updates">
+          <div class="update">
+            <h3>Site maintenance</h3>
+            <section>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut
+              aliquam, repellendus...
+            </section>
+          </div>
+          <div class="update">
+            <h3>Community Share Day</h3>
+            <section>
+              Nesciunt enim adipisci iste ut quam numquam, voluptates doloremque
+              est, voluptate officia in sapiente...
+            </section>
+          </div>
+          <div class="update">
+            <h3>Updated Privacy Policy</h3>
+            <section>
+              Sequi doloribus blanditiis, nihil voluptas nobis vitae
+              perspiciatis aliquid voluptates excepturi sit veritatis
+              deserunt...
+            </section>
+          </div>
+        </div>
+      </div>
+      <div class="trending">
+        <h2>Trending</h2>
+        <div class="users">
+          <img src="/src/img/nin.png" alt="user avatar nail" class="av trent" />
+          <div class="user">
+            <p class="username">@trent</p>
+            <p class="tagline">Lorem ipsum dolor sit</p>
+          </div>
+          <img
+            src="/src/img/cthulhu.png"
+            alt="user avatar cthulu"
+            class="av hunter" />
+          <div class="user">
+            <p class="username">@hunter</p>
+            <p class="tagline">Lorem ipsum dolor sit</p>
+          </div>
+          <img src="/src/img/dear.png" alt="user avatr dear" class="av wendy" />
+          <div class="user">
+            <p class="username">@wendy</p>
+            <p class="tagline">Lorem ipsum dolor sit</p>
+          </div>
+          <img src="/src/img/husky.png" alt="user avatar husky" class="av gg" />
+          <div class="user">
+            <p class="username">@gg</p>
+            <p class="tagline">Lorem ipsum dolor sit</p>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
