Finish styling and add box-shadows.

--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
     <main>
       <div class="projects">
         <h2>Projects</h2>
-        <div class="project">
+        <div class="project shadow">
           <h3>Project One</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
@@ -104,7 +104,7 @@
             ><i class="fa-solid fa-share-nodes"></i>
           </p>
         </div>
-        <div class="project">
+        <div class="project shadow">
           <h3>Project Two</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
@@ -115,7 +115,7 @@
             ><i class="fa-solid fa-share-nodes"></i>
           </p>
         </div>
-        <div class="project">
+        <div class="project shadow">
           <h3>Project Three</h3>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
           <p class="icons">
@@ -123,7 +123,7 @@
             ><i class="fa-solid fa-share-nodes"></i>
           </p>
         </div>
-        <div class="project">
+        <div class="project shadow">
           <h3>Project Four</h3>
           <p>
             Voluptatibus deleniti consequatur quam ad doloribus eveniet maiores
@@ -135,7 +135,7 @@
             ><i class="fa-solid fa-share-nodes"></i>
           </p>
         </div>
-        <div class="project">
+        <div class="project shadow">
           <h3>Project Five</h3>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque
@@ -146,7 +146,7 @@
             ><i class="fa-solid fa-share-nodes"></i>
           </p>
         </div>
-        <div class="project">
+        <div class="project shadow">
           <h3>Project Six</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos culpa
@@ -161,7 +161,7 @@
       </div>
       <div class="announcements">
         <h2>Announcements</h2>
-        <div class="updates">
+        <div class="updates shadow">
           <div class="update">
             <h3>Site maintenance</h3>
             <section>
@@ -188,11 +188,11 @@
       </div>
       <div class="trending">
         <h2>Trending</h2>
-        <div class="users">
+        <div class="users shadow">
           <img src="/src/img/nin.png" alt="user avatar nail" class="av trent" />
           <div class="user">
             <p class="username">@trent</p>
-            <p class="tagline">Lorem ipsum dolor sit</p>
+            <p class="tagline">Suscipit, eum omnis id laborum</p>
           </div>
           <img
             src="/src/img/cthulhu.png"
@@ -205,12 +205,12 @@
           <img src="/src/img/dear.png" alt="user avatr dear" class="av wendy" />
           <div class="user">
             <p class="username">@wendy</p>
-            <p class="tagline">Lorem ipsum dolor sit</p>
+            <p class="tagline">Et laboriosam quibusdam odio.</p>
           </div>
           <img src="/src/img/husky.png" alt="user avatar husky" class="av gg" />
           <div class="user">
             <p class="username">@gg</p>
-            <p class="tagline">Lorem ipsum dolor sit</p>
+            <p class="tagline">Nihil, dolorum libero placeat</p>
           </div>
         </div>
       </div>
