Fix paths to img sources

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         <div class="user-section">
           <i class="fa-regular fa-bell"></i>
           <div class="image">
-            <img src="./img/crow.png" alt="user avatar crow" class="avatar" />
+            <img
+              src="/src/img/crow.png"
+              alt="user avatar crow"
+              class="avatar" />
           </div>
 
           <p class="user-name alternate">Gray Corvid</p>
@@ -33,7 +36,10 @@
       </div>
       <div class="header-bottom">
         <div class="image-big">
-          <img src="./img/crow.png" alt="user avatar crow" class="avatar-big" />
+          <img
+            src="/src/img/crow.png"
+            alt="user avatar crow"
+            class="avatar-big" />
         </div>
         <div class="welcome">
           <p class="hi-there">Hi there,</p>
